# BreakingBat

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
scripts/: execute_rop_gadget_local.py  inject_com_irundown_docallback.py  inject_create_process_doppel.py  inject_create_process_hollow.py  inject_create_remote_thread.py  inject_hijack_remote_thread.py  inject_queue_apc.py  inject_queue_apc_early_bird.py
src/: .clang-format  common.cpp  common.h  errcodes.cpp  fs.cpp  fs.h  hash.cpp  hash.h  kernel_dump.cpp  kernel_dump.h  logging.h  main.cpp  ntapi.h  ntapi_dynamic.h  pdb.cpp  pdb.h  pe.cpp  pe.h  python_core.cpp  python_core.h  python_modules.cpp  python_modules.h  shellcode.cpp  shellcode.h  sysapi.cpp  sysapi.h  unique_memory.h  winapi.h
src/modules/: execute_rop_gadget_local.cpp  inject_com_irundown_docallback.cpp  inject_create_process_doppel.cpp  inject_create_process_hollow.cpp  inject_create_remote_thread.cpp  inject_hijack_remote_thread.cpp  inject_queue_apc.cpp  inject_queue_apc_early_bird.cpp  modules.cpp  modules.h
src/scripts/: execute_rop_gadget_local.cpp  inject_com_irundown_docallback.cpp  inject_create_process_doppel.cpp  inject_create_process_hollow.cpp  inject_create_process_hollowed.cpp  inject_create_remote_thread.cpp  inject_hijack_remote_thread.cpp  inject_queue_apc.cpp  inject_queue_apc_early_bird.cpp  inject_remote_thread.cpp  scripts.cpp  scripts.h
